Cambios necesario para el trabajo del ftont